--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <p><a href="https://twitter.com/codingmum_id?lang=en">Twitter KCMI</a> disini</p>
     <h1>Mengenal Version Control System, Git, dan GitHub</h1>
     
-    <h2>1. Mengenal GitHub</h2>
+    <h2>Mengenal GitHub</h2>
     <ul>
         <li>Membuat akun dan repository di github.com</li>
-          <ul> - Nama repository by dedehsh (contoh: codingmum-belajar-git)</ul>
+          <ul> - Nama repository by dedehsh (codingmum-belajar-git)</ul>
           <ul> - Referensi: <a href="https://www.youtube.com/watch?v=Q3Id0DgcrXY"> https://www.youtube.com/watch?v=Q3Id0DgcrXY </a></ul>
         <li>Melakukan commit untuk menambah/merubah file</li>
           <ul> - Buat file baru di repository, index.html</ul>
@@ -29,7 +29,6 @@
         <li>Mempublish website sendiri di GitHub Pages</li>
           <ul>Referensi: <a href="https://www.youtube.com/watch?v=BA_c3bGQXlQ">https://www.youtube.com/watch?v=BA_c3bGQXlQ</a></ul>
         <li>Menginfokan link github dan website yang telah di publish di Group KCMI Newbie</li>
-        <li>Have fun! Mari bermain-main di GitHub</li>
     </ul>
 </BODY>
 
