--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     
     <h2>Mengenal GitHub</h2>
     <ul>
+	<h3>Pertemuan 1</h3>
+
         <li>Membuat akun dan repository di github.com</li>
           <ul> - Nama repository by dedehsh (codingmum-belajar-git)</ul>
           <ul> - Referensi: <a href="https://www.youtube.com/watch?v=Q3Id0DgcrXY"> https://www.youtube.com/watch?v=Q3Id0DgcrXY </a></ul>
@@ -30,6 +32,15 @@
           <ul>Referensi: <a href="https://www.youtube.com/watch?v=BA_c3bGQXlQ">https://www.youtube.com/watch?v=BA_c3bGQXlQ</a></ul>
         <li>Menginfokan link github dan website yang telah di publish di Group KCMI Newbie</li>
     </ul>
+	<h3>Pertemuan 2</h3>
+
+	<li>Integrasi Git di local komputer dan Github repo di internet</li>
+	 <ul> - Setup Github Desktop di local komputer (download di desktop.github.com, lalu instal)</ul>
+	<li>Clone repo dari Github ke local computer</li>
+	<li>Push dari local komputer ke repo github</li>
+	<li>Buat Branch dan Pull Request (PR)</li>
+	
+
 </BODY>
 
 </HTML>
