--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     
     <h1>Mengenal Version Control System, Git, dan GitHub</h1>
+
+	Nama: dedehsh
     
     <h2>Mengenal GitHub</h2>
     <ul>
